@@ -42,12 +42,83 @@
 #include "util.h"
 
 /* prototypes */
-static Action *_process_input(Protocol * client_prot, Cluster * cluster,
-			     Client * c);
-static Action *_find_cli_script(Protocol * p, Cluster * cluster,
-				  String expect);
-static bool _match_cli_template(Cluster * cluster, Action * act,
-				  regex_t * re, String expect);
+static Action *_process_input(Cluster *cluster, Client *c);
+static Action *_find_cli_script(Cluster *cluster, String expect);
+static bool _match_cli_template(Cluster *cluster, Action *act, regex_t *re,String expect);
+
+/* client protocol (built by cli_init) */
+static Protocol *client_prot = NULL;
+
+
+/* helper for cli_init */
+static void
+_mkexpect(List *script, char *str)
+{
+    Script_El *script_el;
+    struct timeval tv;
+
+    tv.tv_sec = tv.tv_usec = 0;
+    tv.tv_usec = 0;
+    *script = list_create((ListDelF) conf_script_el_destroy);
+    script_el = conf_script_el_create(EXPECT, str, NULL, tv);
+    list_append(*script, script_el);
+}
+
+/*
+ * Initialize module
+ */
+void cli_init(void)
+{
+    List *scripts;
+
+    assert(client_prot == NULL);
+
+    /* 
+     * Initialize the expect/send pairs for the client protocol. 
+     * Each one has exactly one EXPECT.  
+     */
+    client_prot = (Protocol *) Malloc(sizeof(Protocol));
+
+    scripts = (List *) Malloc(NUM_SCRIPTS * sizeof(List));
+    client_prot->scripts = scripts;
+    client_prot->num_scripts = NUM_SCRIPTS;
+    client_prot->mode = REGEX;
+
+    /*
+     *  N.B. The server.c:client_reply() function hard codes the actual
+     * replies generated by each command.  The following are just the 
+     * means for detecting which function the client in instigating.  
+     */
+    scripts[PM_ERROR] = NULL;
+    _mkexpect(&scripts[PM_LOG_IN],	    "powerman");
+    _mkexpect(&scripts[PM_CHECK_LOGIN],	    "check login");
+    _mkexpect(&scripts[PM_LOG_OUT],	    "quit");
+    _mkexpect(&scripts[PM_UPDATE_PLUGS],    "update plugs");
+    _mkexpect(&scripts[PM_UPDATE_NODES],    "update nodes");
+    _mkexpect(&scripts[PM_POWER_ON],	    "on ([^[:space:]]+)");
+    _mkexpect(&scripts[PM_POWER_OFF],	    "off ([^[:space:]]+)");
+    _mkexpect(&scripts[PM_POWER_CYCLE],	    "cycle ([^[:space:]]+)");
+    _mkexpect(&scripts[PM_RESET],	    "reset ([^[:space:]]+)");
+    _mkexpect(&scripts[PM_NAMES],	    "names ([^[:space:]]+)");
+}
+
+/*
+ * Finalize module.
+ */
+void
+cli_fini(void)
+{
+    int i;
+
+    assert(client_prot != NULL);
+
+    /* destroy client protocol */
+    for (i = 0; i < client_prot->num_scripts; i++)
+	list_destroy(client_prot->scripts[i]);
+    Free(client_prot);
+    client_prot = NULL;
+}
+
 /*
  *   Select has indicated that there is material read to
  * be read on the fd associated with the Client c. 
@@ -62,8 +133,7 @@ static bool _match_cli_template(Cluster * cluster, Action * act,
  * If there was nothing to read then it may be time to 
  * close the connection to the client.   
  */
-void cli_handle_read(Protocol * client_prot, Cluster * cluster,
-		   List acts, Client * c)
+void cli_handle_read(Cluster * cluster, List acts, Client * c)
 {
     int n;
     Action *act = NULL;
@@ -87,7 +157,7 @@ void cli_handle_read(Protocol * client_prot, Cluster * cluster,
          * Action fields client, seq, com, num and target for later
          * processing, and enqueue the Action.  
          */
-	act = _process_input(client_prot, cluster, c);
+	act = _process_input(cluster, c);
 	if (act != NULL)
 	    list_append(acts, act);
     }
@@ -106,8 +176,7 @@ void cli_handle_read(Protocol * client_prot, Cluster * cluster,
  * others require sending the Server Action to the devices 
  * first.
  */
-static Action *_process_input(Protocol * client_prot, 
-		Cluster * cluster, Client * c)
+static Action *_process_input(Cluster * cluster, Client * c)
 {
     Action *act;
     String expect;
@@ -118,7 +187,7 @@ static Action *_process_input(Protocol * client_prot,
     if (expect == NULL)
 	return NULL;
 
-    act = _find_cli_script(client_prot, cluster, expect);
+    act = _find_cli_script(cluster, expect);
     str_destroy(expect);
     if (act != NULL) {
 	act->client = c;
@@ -154,18 +223,20 @@ void cli_handle_write(Client * c)
  * A complete command would be indicated by a '\n'.  There
  * could be more than one.
  */
-static Action *_find_cli_script(Protocol * p, Cluster * cluster, String expect)
+static Action *_find_cli_script(Cluster * cluster, String expect)
 {
     Action *act;
     bool found_it = FALSE;
     regex_t *re;
 
+    assert(client_prot != NULL);
+
     act = act_create(PM_ERROR);
     /* look through the array for a match */
     while ((!found_it) && (act->com < (NUM_SCRIPTS - 1))) {
 	act->com++;
-	assert(p->scripts[act->com] != NULL);
-	act->itr = list_iterator_create(p->scripts[act->com]);
+	assert(client_prot->scripts[act->com] != NULL);
+	act->itr = list_iterator_create(client_prot->scripts[act->com]);
 	act->cur = list_next(act->itr);
 	assert(act->cur->type == EXPECT);
 	re = &(act->cur->s_or_e.expect.exp);
@@ -324,7 +395,7 @@ void cli_reply(Cluster * cluster, Action * act)
 }
 
 
-Client *cli_create()
+Client *cli_create(void)
 {
     Client *client;
 
