@@ -24,7 +24,10 @@
  *  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
 \*****************************************************************************/
 
+#include <sys/types.h>
 #include <sys/time.h>
+#include <sys/stat.h>
+#include <unistd.h>
 #include <time.h>
 #include <string.h>
 #include <assert.h>
@@ -40,70 +43,29 @@
 #include "string.h"
 #include "config.h"
 
-/* helper for conf_init_client_protocol */
-static void
-_mkexpect(List *script, char *str)
-{
-    Script_El *script_el;
-    struct timeval tv;
 
-    tv.tv_sec = tv.tv_usec = 0;
-    tv.tv_usec = 0;
-    *script = list_create((ListDelF) conf_script_el_destroy);
-    script_el = conf_script_el_create(EXPECT, str, NULL, tv);
-    list_append(*script, script_el);
+/* parse the named config file */
+void
+conf_init(char *filename)
+{
+    struct stat stbuf;
+    int parse_config_file(char *filename);
+
+    /* validate config file */
+    if (stat(filename, &stbuf) < 0)
+	err_exit(TRUE, "%s", filename);
+    if ((stbuf.st_mode & S_IFMT) != S_IFREG)
+	err_exit(FALSE, "%s is not a regular file\n", filename);
+
+    /* call yacc parser against config file */
+    parse_config_file(filename);
 }
 
-/*
- *   Constructor - This is a sort of degenerate Protocol specifically
- * for the client protocol.  It doesn't require the flexibility of
- * the device protocols, because I get to write the client that 
- * talks to it.  Every script has exactly two steps.  The first is 
- * recognizable string for the command in an EXPECT structure, the 
- * second is not even recorded here.  It is the hard coded response
- * the server always makes to the client in client_reply().
- *
- * Produces:  Protocol
- *            in particular the g->client_protocol
- */
-Protocol *conf_init_client_protocol(void)
+/* finalize module */
+void
+conf_fini(void)
 {
-    Protocol *client_prot;
-    List *scripts;
-
-    /* 
-     * Initialize the expect/send pairs for the client protocol. 
-     * Each one has exactly one EXPECT.  
-     */
-
-    client_prot = (Protocol *) Malloc(sizeof(Protocol));
-
-    scripts = (List *) Malloc(NUM_SCRIPTS * sizeof(List));
-    client_prot->scripts = scripts;
-    client_prot->num_scripts = NUM_SCRIPTS;
-    client_prot->mode = REGEX;
-
-    /*
-     *  N.B. The server.c:client_reply() function hard codes the actual
-     * replies generated by each command.  The following are just the 
-     * means for detecting which function the client in instigating.  
-     */
-
-    scripts[PM_ERROR] = NULL;
-    _mkexpect(&scripts[PM_LOG_IN],	    "powerman");
-    _mkexpect(&scripts[PM_CHECK_LOGIN],	    "check login");
-    _mkexpect(&scripts[PM_LOG_OUT],	    "quit");
-    _mkexpect(&scripts[PM_UPDATE_PLUGS],    "update plugs");
-    _mkexpect(&scripts[PM_UPDATE_NODES],    "update nodes");
-    _mkexpect(&scripts[PM_POWER_ON],	    "on ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_POWER_OFF],	    "off ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_POWER_CYCLE],	    "cycle ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_RESET],	    "reset ([^[:space:]]+)");
-    _mkexpect(&scripts[PM_NAMES],	    "names ([^[:space:]]+)");
-
-    return client_prot;
 }
-
 
 /*******************************************************************
  *                                                                 *
@@ -409,6 +371,9 @@ void conf_strtotv(struct timeval *tv, char *s)
     tv->tv_sec = sec;
     tv->tv_usec = usec;
 }
+
+
+
 
 /*
  * vi:softtabstop=4
