@@ -1,5 +1,8 @@
 2002-09-16 garlick
 	* Got rid of remnants of second "completion" expect script 
+	* Move the client protocol data structure into client.c and provide cli_init(),
+	  cli_fini() interfaces to build/tear it down.
+	* Call yacc parser from config.c via conf_init() interface.
 
 2002-09-14 garlick
 	* Renamed functions to use lower case module prefix.
